crates/plotnik-lib/tests/02-parser/recovery_validation/pipe_in_alternation.txt
Q = [(a) | (b) | (c)]
------------------ DIAGNOSTICS -------------------
error: patterns are separated by whitespace
 --> query.ptk:1:10
  |
1 | Q = [(a) | (b) | (c)]
  |          ^
  |
help: remove the `|`
  |
1 - Q = [(a) | (b) | (c)]
1 + Q = [(a)  (b) | (c)]
  |

error: patterns are separated by whitespace
 --> query.ptk:1:16
  |
1 | Q = [(a) | (b) | (c)]
  |                ^
  |
help: remove the `|`
  |
1 - Q = [(a) | (b) | (c)]
1 + Q = [(a) | (b)  (c)]
  |
